--- a/app/src/main/res/layout/item_row.xml
+++ b/app/src/main/res/layout/item_row.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:orientation="vertical"
-    android:layout_width="match_parent"
+    android:layout_width="wrap_content"
     android:layout_height="wrap_content">
 
     <LinearLayout
@@ -12,20 +12,11 @@
         android:orientation="horizontal">
 
         <ImageView
-            android:id="@+id/imageView1"
+            android:id="@+id/imageView"
             android:layout_width="150dp"
             android:layout_height="150dp"
             android:layout_marginLeft="20dp"
-            tools:srcCompat="@tools:sample/backgrounds/scenic" />
-
-        <ImageView
-            android:id="@+id/imageView2"
-           android:layout_marginRight="10dp"
-            android:layout_marginLeft="70dp"
-
-            android:layout_width="150dp"
-            android:layout_height="150dp"
-            tools:srcCompat="@tools:sample/backgrounds/scenic" />
+           android:background="@drawable/search_icon" />
 
 
     </LinearLayout>
@@ -36,22 +27,13 @@
         android:orientation="horizontal">
 
         <TextView
-            android:id="@+id/nameOfPer1"
+            android:id="@+id/nameOfPer"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:textSize="25dp"
+            android:textSize="20dp"
             android:gravity="center_horizontal"
             android:text="TextView" />
 
-        <TextView
-            android:id="@+id/nameOfPer2"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:layout_marginLeft="40dp"
-            android:textSize="25dp"
-            android:gravity="center_horizontal"
-            android:text="TextView" />
     </LinearLayout>
 </LinearLayout>
